// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monserrat Testing Monserrat renders correctly 1`] = `
<Text
  style={
    Object {
      "color": "black",
      "fontFamily": "Montserrat-Regular",
      "fontSize": 12,
    }
  }
/>
`;

exports[`Monserrat Testing Monserrat renders correctly with props 1`] = `
<Text
  style={
    Object {
      "color": "red",
      "fontFamily": "Montserrat-Bold",
      "fontSize": 20,
    }
  }
/>
`;
